# mosaicgame-cpp

./: CMakeLists.txt  library.cpp  library.h  main.cpp
Board/: BitsetBoard.cpp  BitsetBoard.h  Board.h  GMPBoard.cpp  GMPBoard.h
Game/: BitsetOneToOneGame.cpp  BitsetOneToOneGame.h  GMPOneToOneGame.cpp  GMPOneToOneGame.h  OneToOneGame.h
Game/Move/: BitsetMove.cpp  BitsetMove.h  GMPMove.cpp  GMPMove.h  Move.h
cmake/: FindGMP.cmake  FindGMPXX.cmake
